--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "author": "Brian Mau",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "debug": "node --nolazy --inspect --debug-brk=5858 ./server.js"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@types/socket.io-client": "^1.4.29",
     "@types/webrtc": "0.0.21",
     "eslint": "^4.2.0",
+    "nodemon": "^2.0.7",
     "ws": "^7.4.5"
   }
 }
